--- a/cheng/public/index.html
+++ b/cheng/public/index.html
@@ -62,12 +62,15 @@
               <label for="timeRange">Time Range:</label>
               <select id="timeRange">
                 <option value="all">All Data</option>
-                <option value="hour" selected>Last Hour</option>
+                <option value="newest20" selected>Newest 20 Points</option>
+                <option value="hour">Last Hour</option>
                 <option value="day">Last Day</option>
+                <option value="week">Last Week</option>
+                <option value="month">Last Month</option>
               </select>
             </div>
           </div>
-          <div class="chart-wrapper">
+          <div id="chartWrapper" class="chart-wrapper">
             <canvas id="sensorChart"></canvas>
           </div>
         </div>
