test websocket deployment

--- a/cheng/public/index.html
+++ b/cheng/public/index.html
@@ -13,6 +13,9 @@
 <body>
   <header>
     <h1>Sensor Dashboard</h1>
+    <div class="control-panel-link">
+      <a href="control.html" class="control-link"><i class="fas fa-sliders-h"></i> Device Control</a>
+    </div>
     <div class="time-container">
       <div id="currentTime"></div>
       <div id="currentDate"></div>
@@ -76,6 +79,7 @@
         </div>
       </div>
     </section>
+    
   </main>
 
   <script src="app.js"></script>
