--- a/cheng/public/index.html
+++ b/cheng/public/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1>Sensor Dashboard</h1>
     <div class="control-panel-link">
-      <a href="control.html" class="control-link"><i class="fas fa-sliders-h"></i> Device Control</a>
+      <a href="/mqtt" class="control-link"><i class="fas fa-exchange-alt"></i> MQTT Monitor</a>
     </div>
     <div class="time-container">
       <div id="currentTime"></div>
