added rules system into the server

--- a/cheng/public/index.html
+++ b/cheng/public/index.html
@@ -16,6 +16,9 @@
     <div class="control-panel-link">
       <a href="/mqtt" class="control-link"><i class="fas fa-exchange-alt"></i> MQTT Monitor</a>
     </div>
+    <div class="control-panel-link">
+      <a href="/rules" class="control-link"><i class="fas fa-cogs"></i> Rules Manager</a>
+    </div>
     <div class="time-container">
       <div id="currentTime"></div>
       <div id="currentDate"></div>
