--- a/cheng/public/mqtt.html
+++ b/cheng/public/mqtt.html
@@ -131,14 +131,13 @@
                     <p class="description">Send a raw JSON command as broadcast to all devices</p>
                     <div class="json-editor-container">
                         <textarea id="raw-json-editor" class="json-editor" rows="12" spellcheck="false">
-                            {
-                                "id": "custom_cmd_123",
-                                "component": "led",
-                                "action": "power",
-                                "value": "on",
-                                "timestamp": 1678423957123
-                            }
-                        </textarea>
+{
+    "id": "custom_cmd_123",
+    "component": "led",
+    "action": "power",
+    "value": "on",
+    "timestamp": 1678423957123
+}</textarea>
                     </div>
                     <div class="json-editor-actions">
                         <button id="format-json" class="btn-secondary">
