--- a/cheng/public/index.html
+++ b/cheng/public/index.html
@@ -12,16 +12,16 @@
 </head>
 <body>
   <header>
-    <h1>Sensor Dashboard</h1>
-    <div class="control-panel-link">
-      <a href="/mqtt" class="control-link"><i class="fas fa-exchange-alt"></i> MQTT Monitor</a>
-    </div>
-    <div class="control-panel-link">
-      <a href="/rules" class="control-link"><i class="fas fa-cogs"></i> Rules Manager</a>
-    </div>
-    <div class="time-container">
-      <div id="currentTime"></div>
-      <div id="currentDate"></div>
+    <div class="container">
+      <h1><i class="fas fa-chart-line"></i> Sensor Dashboard</h1>
+      <div class="header-actions">
+        <a href="/mqtt" class="dashboard-link"><i class="fas fa-exchange-alt"></i> MQTT Monitor</a>
+        <a href="/rules" class="dashboard-link"><i class="fas fa-cogs"></i> Rules Manager</a>
+        <div class="time-container">
+          <div id="currentTime"></div>
+          <div id="currentDate"></div>
+        </div>
+      </div>
     </div>
   </header>
 
