--- a/cheng/public/mqtt.html
+++ b/cheng/public/mqtt.html
@@ -12,7 +12,8 @@
     <header>
         <h1><i class="fas fa-exchange-alt"></i> MQTT Monitor</h1>
         <div class="header-actions">
-            <a href="index.html" class="dashboard-link"><i class="fas fa-chart-line"></i> Back to Dashboard</a>
+            <a href="/rules" class="dashboard-link"><i class="fas fa-cogs"></i> Rules Manager</a>
+            <a href="/" class="dashboard-link"><i class="fas fa-chart-line"></i> Back to Dashboard</a>
             <div class="time-container">
                 <div id="currentTime"></div>
                 <div id="currentDate"></div>
