--- a/cheng/public/rules.html
+++ b/cheng/public/rules.html
@@ -13,7 +13,8 @@
     <div class="container">
       <h1><i class="fas fa-cogs"></i> IoT Rules Manager</h1>
       <div class="header-actions">
-        <a href="index.html" class="dashboard-link"><i class="fas fa-chart-line"></i> Back to Dashboard</a>
+        <a href="/mqtt" class="dashboard-link"><i class="fas fa-exchange-alt"></i> MQTT Monitor</a>
+        <a href="/" class="dashboard-link"><i class="fas fa-chart-line"></i> Back to Dashboard</a>
         <div class="time-container">
           <div id="currentTime"></div>
           <div id="currentDate"></div>
