--- a/cheng/public/mqtt.html
+++ b/cheng/public/mqtt.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="mqtt-monitor.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.min.js"></script>
 </head>
+
 <body>
     <header>
         <h1><i class="fas fa-exchange-alt"></i> MQTT Monitor</h1>
@@ -86,7 +88,12 @@
                             </div>
                             <div class="form-group">
                                 <label for="value">Value:</label>
-                                <input type="text" id="value" placeholder="on, off, 50, etc." required>
+                                <label for="value">Choose an option:</label>
+                                <select id="value" name="value" required>
+                                    <option value="on">On</option>
+                                    <option value="off">Off</option>
+                                </select>
+
                             </div>
                             <button type="submit" class="btn-send">
                                 <i class="fas fa-paper-plane"></i> Send Command
@@ -168,4 +175,5 @@
 
     <script src="mqtt-monitor.js"></script>
 </body>
+
 </html>
