ok it works, yc is the best

--- a/cheng/public/mqtt.html
+++ b/cheng/public/mqtt.html
@@ -87,9 +87,9 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="value">Value:</label>
                                 <label for="value">Choose an option:</label>
                                 <select id="value" name="value" required>
+                                    <option value="" disabled selected>Select On/Off</option>
                                     <option value="on">On</option>
                                     <option value="off">Off</option>
                                 </select>
