let's die young

--- a/cheng/public/index.html
+++ b/cheng/public/index.html
@@ -17,6 +17,7 @@
       <div class="header-actions">
         <a href="/mqtt" class="dashboard-link"><i class="fas fa-exchange-alt"></i> MQTT Monitor</a>
         <a href="/rules" class="dashboard-link"><i class="fas fa-cogs"></i> Rules Manager</a>
+        <a href="/control" class="dashboard-link"><i class="fas fa-leaf"></i> Device Control</a>
         <div class="time-container">
           <div id="currentTime"></div>
           <div id="currentDate"></div>
