--- a/cheng/public/mqtt.html
+++ b/cheng/public/mqtt.html
@@ -15,6 +15,7 @@
         <h1><i class="fas fa-exchange-alt"></i> MQTT Monitor</h1>
         <div class="header-actions">
             <a href="/rules" class="dashboard-link"><i class="fas fa-cogs"></i> Rules Manager</a>
+            <a href="/control" class="dashboard-link"><i class="fas fa-leaf"></i> Device Control</a>
             <a href="/" class="dashboard-link"><i class="fas fa-chart-line"></i> Back to Dashboard</a>
             <div class="time-container">
                 <div id="currentTime"></div>
